# COMS4995-Project

./: CMakeLists.txt  ImgLibrary.cpp  ImgLibrary.h  LICENSE  Makefile  README.md  gui.py  imgLibrary.h  jpeg.cpp  jpeg.h  library.h  main.cpp  main.cpp_backup  main.old  new_main.cpp  pycode.py  setup.py  test
ImgLib/: ImgLibrary.cpp  ImgLibrary.h  bindings.cpp
ImgLib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lib/: jpeg.h
performance_test/: Makefile  performance_imglib.cpp  performance_opencv.cpp
tests/: test1.py
